@@ -223,6 +223,11 @@ package DXM;
 				sqra => 'Cluster QRA Locator$_[0], DON\'T FORGET TO CHANGE YOUR DXVars.pm',
 				sorry => 'Sorry',
 				spf1 => 'spoof: creating new user $_[0]',
+				stathf => 'HF DX Spot Stats, last 31 days',
+				stathft => 'HF DX Spot Stats, last 31 days for DXCC $_[0]',
+				statvhf => 'VHF+ DX Spot Stats, last 31 days',
+				statvhft => 'VHF+ DX Spot Stats, last 31 days for DXCC $_[0]',
+				statdx => 'Total DX Spots last 31 days',
 				sun => 'Location                              Rise   Set      Azim   Elev',
 				suser1 => 'usage: callsign user_field_name value',
 				suser2 => 'User $_[0] not found',
