@@ -1,3 +1,11 @@
+09Sep01=======================================================================
+1. Add show/dxstats command
+2. Add show/hfstats command
+3. Add show/vhfstats command
+4. Add show/hftable command
+5. Add show/vhftable command (BE WARNED, the first time you run one of these
+commands it will take some considerable time to complete, thereafter it will
+be a lot faster).
 08Sep01=======================================================================
 1. Update the sgml docs on filtering a bit.
 06Sep01=======================================================================
